<resources>
    <string name="app_name">Scanner</string>
    <string name="app_main_pattern_tv">选择文档导入方式</string>
    <string name="app_main_pattern_camera">相机</string>
    <string name="app_main_pattern_album">相册</string>

    <string name="app_main_manipulation_tv">浏览已处理图片</string>
    
    <string name="app_album_reselect">重新选择</string>
    <string name="app_album_preproc">畸变校正</string>
    <string name="app_album_correction">文字区域裁剪</string>
    <string name="app_album_save">保存</string>
    <string name="app_album_threshold">二值化</string>

    <string name="app_album_dialog_title">提示</string>
    <string name="app_album_dialog_content">即将前往系统相册，是否允许？</string>


</resources>
