<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_album_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/app_album_progressbar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/app_album_original_iv"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_album_reselect_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_album_reselect"
                android:textColor="@color/app_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@color/app_dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_album_preproc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_album_preproc"
                android:textColor="@color/app_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@color/app_dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_album_correction_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_album_correction"
                android:textColor="@color/app_grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@color/app_dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_album_threshold_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_album_threshold"
                android:textColor="@color/app_grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/app_album_save_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_album_save"
                android:textColor="@color/app_light_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"

                android:background="@drawable/app_album_save_32" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>